# trading_llm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER_GUIDE.md  DOCKER_QUICKSTART.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  MANIFEST.md  Makefile  NETWORK_TROUBLESHOOTING.md  PROJECT_SUMMARY.md  README.md  RTX2070_SETUP.md  RX7800XT_SETUP.md  app.py  diagnose_model.py  docker-compose.yml  position_analysis.py  pyproject.toml  requirements.txt  training_diagnostic.py  training_log.txt  training_log_fixed.txt  training_log_retrain.txt  training_log_retrain_v2.txt  verify_setup.py
.github/workflows/: docker.yml  train-eval.yml  verify.yml
agent/: stock_agent.py
auth/: auth.py
data/: tradebot.db  trading_llm.db
data/raw/: SPY_sample_data.csv
data/synthetic/: test.txt  train.txt  val.txt
models/synthetic_verification/checkpoint-1350/: config.json  scaler.pt  scheduler.pt  trainer_state.json
models/synthetic_verification/checkpoint-1500/: scaler.pt  scheduler.pt  tokenizer.json  trainer_state.json
src/: 01_generate_training_data.py  02_train_model.py  03_test_model.py  04_interactive_inference.py  05_train_classifier.py  verify_model_training.py  verify_model_training_simple.py
tests/: conftest.py  test_data_generator.py  test_indicators.py  test_market_data.py  test_token_definitions.py
utils/: __init__.py  data_generator.py  indicators.py  market_data.py  news_sentiment.py  paper_trader.py  synthetic_data_generator.py  token_definitions.py
