[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tradebot"
version = "1.2"
description = "A proof-of-concept LLM that predicts trading actions from tokenized market data"
requires-python = ">=3.10"
authors = [
    {name = "TradeBot Project"},
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0,<5.0.0",
    "datasets>=2.14.0",
    "accelerate>=1.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "ta>=0.11.0",
    "tqdm>=4.65.0",
    "streamlit>=1.32.0",
    "streamlit-autorefresh>=1.0.0",
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".git", "__pycache__", "models", "data"]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N802",  # function name should be lowercase (allow CamelCase for torch classes)
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src", "utils", "agent", "auth"]
omit = ["*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if __name__ == '__main__':",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
]

[tool.setuptools.packages.find]
include = ["src", "utils", "agent", "auth"]
